crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_order_by.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b from t order by a asc, b desc

-- Output:
select
  a,
  b
from t
order by a asc, b desc;
