crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_subquery_in_where.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t where x in (select y from u)

-- Output:
select a
from t
where x in (
  select y from u
);
