crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_where.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b from t where x = 1

-- Output:
select
  a,
  b
from t
where x = 1;
