crates/solite-fmt/src/snapshots/solite_fmt__tests__simple_select.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t

-- Output:
select a from t;
