crates/solite-fmt/src/snapshots/solite_fmt__tests__string_literals.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select 'hello', 'it''s', 'test' from t

-- Output:
select
  'hello',
  'it''s',
  'test'
from t;
