crates/solite-fmt/src/snapshots/solite_fmt__tests__update_from_join.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- update t set a = u.b from u where t.id = u.id

-- Output:
update t
set
  a = u.b
from u
where t.id = u.id;
